Fix tooltip theming (works in dark mode now)

--- a/src/styles/overrides.less
+++ b/src/styles/overrides.less
@@ -17,7 +17,7 @@
     color: var(--text-color);
 }
 
-:root {
+.root {
     --tooltip-background-color: var(--light-accent) !important;
     --tooltip-border-radius: 10px !important;
     --tooltip-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5) !important;
