--- a/src/styles/themes.less
+++ b/src/styles/themes.less
@@ -39,7 +39,7 @@
     --background-color: rgb(30, 30, 30);
     --nav-bg: var(--background-color);
     --blur-bg-color: rgba(0, 0, 0, 0.3);
-    --transluscent-bg: rgba(80, 80, 80, 0.4);
+    --transluscent-bg: rgba(50, 50, 50, 0.7);
 
     --accent-danger: rgb(255, 120, 120);
     --accent-gradient: linear-gradient(140deg, var(--secondary), var(--primary));
